--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.letters-list li {
+  // float: left;
+  display:inline;
+}
+
+.single-letter {
+  border-radius: 25%;
+  background-color: #eee;
+  list-style: none;
+  padding: 15px;
+  margin: 15px;
+  width: 25px;
+  text-align: center;
+  height: 25px;
+}
+
+.btn {
+  background-color: blue;
+  color: white;
+  padding: 10px;
+  border-radius: 20%;
+}
+
+.word-question {
+  padding: 20px 20px 0px 20px;
+  margin: 30px;
+}
+
+.form {
+  padding: 0px 30px;
+  margin: 0px 30px;
+}
